<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <ImageView
        android:id="@+id/img_avatar"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_avatar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hi_ahihi_dev"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@id/img_avatar"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_subtext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Let's explore something new"
        android:textColor="#888888"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@id/img_avatar"
        app:layout_constraintHorizontal_bias="0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_greeting" />

    <androidx.cardview.widget.CardView
        android:id="@+id/card_search"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="25dp"
        app:cardElevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_subtext">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cslSearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_search_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="16dp"
                android:contentDescription="Search Icon"
                android:src="@drawable/ic_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/et_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@null"
                android:hint="@string/search_map"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/img_search_icon"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tv_choose_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Choose thing you want to explore"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/card_search" />

    <GridLayout
        android:id="@+id/grid_buttons"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:columnCount="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_choose_title">

        <Button
            android:id="@+id/btnShare"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            android:text="@string/share"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnLaw"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:backgroundTint="@color/purple"
            android:maxLines="1"
            android:text="@string/law"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnFollowMe"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:backgroundTint="@color/purple"
            android:singleLine="true"
            android:text="@string/follow_me"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnTest"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/purple"
            android:text="@string/test"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnSetScreen"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:backgroundTint="@color/purple"
            android:singleLine="true"
            android:text="@string/set_screen"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnSetPhone"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:backgroundTint="@color/purple"
            android:singleLine="true"
            android:text="@string/set_phone"
            android:textColor="#FFFFFF" />
    </GridLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
